Commiting additional changes

--- a/HTML_Personal Site/index.html
+++ b/HTML_Personal Site/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>♊Andele</title>
 </head>
+
 <body>
+    <img src="/Users/gebruiker/Desktop/Web Development /images/theshepherd.png" alt="the Shepherd profile picture">
     <h1>The Shepherd</h1>
     <p>
         <em>Fullstack Developer ☕</em>
@@ -14,8 +16,18 @@
     <p>A full-stack developer is a developer or engineer who can build both the front end and the back end of a website. The front end (the parts of a website a user sees and interacts with) and the back end (the behind-the-scenes data storage and processing) require different skill sets.</p>
     <hr size="2" noshade="0">
     <h3>Education</h3>
+    <ul>
         <li>ROMMA BASIC</li>
         <li>KOSS</li>
         <li>UG</li>
+    </ul>
+    <h3>Front-End Development:</h3>
+    <ol>
+        <li>HTML/CSS: Creating the structure and styling of web pages.</li>
+        <li>JavaScript: Implementing interactive and dynamic elements on web pages.</li>
+        <li>Frameworks and Libraries: Using popular tools like React, Angular, or Vue.js to build complex user interfaces.</li>
+        <li>Responsive Design: Ensuring websites are accessible and visually appealing across different devices.</li>
+    </ol>
+    </ul>    
 </body>
 </html>
