Commiting additional changes

--- a/HTML_Personal Site/index.html
+++ b/HTML_Personal Site/index.html
@@ -11,7 +11,7 @@
     <img src="/Users/gebruiker/Desktop/Web Development /images/theshepherd.png" alt="the Shepherd profile picture">
     <h1>The Shepherd</h1>
     <p>
-        <em>Fullstack Developer ☕</em>
+        <em>Fullstack Developer at <strong><a href="https://www.trestleacademyghana.org/">Trestle</a>☕</strong> </em>
     </p>
     <p>A full-stack developer is a developer or engineer who can build both the front end and the back end of a website. The front end (the parts of a website a user sees and interacts with) and the back end (the behind-the-scenes data storage and processing) require different skill sets.</p>
     <hr size="2" noshade="0">
@@ -21,13 +21,7 @@
         <li>KOSS</li>
         <li>UG</li>
     </ul>
-    <h3>Front-End Development:</h3>
-    <ol>
-        <li>HTML/CSS: Creating the structure and styling of web pages.</li>
-        <li>JavaScript: Implementing interactive and dynamic elements on web pages.</li>
-        <li>Frameworks and Libraries: Using popular tools like React, Angular, or Vue.js to build complex user interfaces.</li>
-        <li>Responsive Design: Ensuring websites are accessible and visually appealing across different devices.</li>
-    </ol>
-    </ul>    
+    <a href="/Users/gebruiker/Desktop/Web Development /FrontEnd.html">FrontEnd</a> 
+    <a href="/Users/gebruiker/Desktop/Web Development /Contact.html">Contact</a> 
 </body>
 </html>
